--- a/src/style/general.css
+++ b/src/style/general.css
@@ -1,6 +1,6 @@
 /* 
 
---- 01 TYPOGRAFPHY SYSTEM
+--- 01 TYPOGRAPHY SYSTEM
 - Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
@@ -23,7 +23,9 @@ Large: 1.8
 
 --- 02 COLORS
 - Primary: 
+#316291
 - Tints: 
+#eaeff4
 - Shades:
 - Accents: 
 - Greys: 
